--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Roman - Senior Blockchain Developer</title>
     <meta name="description" content="Senior Blockchain Developer specializing in smart contracts, DeFi, and Web3 applications" />
     <meta name="author" content="Roman" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
